force-app/main/default/objects/Tenancy__c/Tenancy__c.object-meta.xml
<CustomObject>
    <description>The central linking object that connects a Room to a Tenant (Contact). Stores all tenancy agreement details: rent amount, frequency, start/end dates, deposit, and contract reference. Also links to the tenant's Experience Cloud (Community) user account.</description>
    <label>Tenancy</label>
    <nameField>
        <displayFormat>TEN-{0000}</displayFormat>
        <label>Tenancy Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tenancies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>