force-app/main/default/objects/Tenancy__c/fields/Available_Credits__c.field-meta.xml
<CustomField>
    <fullName>Available_Credits__c</fullName>
    <description>Credits available to offset future invoices. Equals Total Credits Received minus Total Credits Applied.</description>
    <formula>NULLVALUE(Total_Credits__c, 0) - NULLVALUE(Total_Credits_Applied__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Credits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>