force-app/main/default/objects/Tenancy__c/fields/Community_User__c.field-meta.xml
<CustomField>
    <fullName>Community_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links this tenancy to the tenant's Experience Cloud (Community) User account. Used to control what a logged-in community user can see. Populated when the tenant is enabled as a community user. Community components filter Tenancy records using: WHERE Community_User__c = :UserInfo.getUserId().</description>
    <label>Community User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Tenancies</relationshipLabel>
    <relationshipName>Tenancies</relationshipName>
    <type>Lookup</type>
</CustomField>