force-app/main/default/objects/Tenancy__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional link to the standard Salesforce Contract object representing the signed tenancy agreement. Files (PDF contracts) can also be attached directly to this Tenancy record via Salesforce Files.</description>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Tenancies</relationshipLabel>
    <relationshipName>Tenancies</relationshipName>
    <type>Lookup</type>
</CustomField>