force-app/main/default/objects/Tenancy__c/fields/Next_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Due_Date__c</fullName>
    <description>Formula field that calculates the next rent due date based on the start date and payment frequency. Weekly = every 7 days, Fortnightly = every 14 days, Monthly = every 30 days from start date.</description>
    <formula>IF(
  ISBLANK(Rent_Start_Date__c),
  NULL,
  IF(
    ISPICKVAL(Rent_Frequency__c, &quot;Weekly&quot;),
    Rent_Start_Date__c + (CEILING(MAX(TODAY() - Rent_Start_Date__c, 0) / 7) * 7),
    IF(
      ISPICKVAL(Rent_Frequency__c, &quot;Fortnightly&quot;),
      Rent_Start_Date__c + (CEILING(MAX(TODAY() - Rent_Start_Date__c, 0) / 14) * 14),
      Rent_Start_Date__c + (CEILING(MAX(TODAY() - Rent_Start_Date__c, 0) / 30) * 30)
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Due Date</label>
    <type>Date</type>
</CustomField>