force-app/main/default/objects/Tenancy__c/fields/Rent_a_room__c.field-meta.xml
<CustomField>
    <fullName>Rent_a_room__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rent a room</label>
    <type>Checkbox</type>
</CustomField>