force-app/main/default/objects/Tenancy__c/fields/Rent_Amount__c.field-meta.xml
<CustomField>
    <fullName>Rent_Amount__c</fullName>
    <description>The agreed rent amount per payment period (as defined by Rent_Frequency__c).</description>
    <label>Rent Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>