force-app/main/default/objects/Tenancy__c/fields/Rent_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Rent_End_Date__c</fullName>
    <description>The date on which this tenancy agreement ends. Leave blank for periodic (rolling) tenancies.</description>
    <label>Rent End Date</label>
    <type>Date</type>
</CustomField>