force-app/main/default/objects/Tenancy__c/fields/Rent_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Rent_Start_Date__c</fullName>
    <description>The date on which this tenancy agreement begins and rent starts accruing.</description>
    <label>Rent Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>