force-app/main/default/objects/Tenancy__c/fields/Room__c.field-meta.xml
<CustomField>
    <fullName>Room__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup relationship to the Room being rented. A tenancy can exist without a room.</description>
    <label>Room</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Room__c.Property__c</field>
            <operation>equals</operation>
            <valueField>$Source.Property__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Room__c</referenceTo>
    <relationshipLabel>Tenancies</relationshipLabel>
    <relationshipName>Tenancies</relationshipName>
    <type>Lookup</type>
</CustomField>