force-app/main/default/objects/Tenancy__c/fields/Tenant__c.field-meta.xml
<CustomField>
    <fullName>Tenant__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Contact record representing the tenant. This is the primary person record. The Community_User__c field links to their Salesforce Experience Cloud login account.</description>
    <label>Tenant (Contact)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Tenancies</relationshipLabel>
    <relationshipName>Tenancies</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>