force-app/main/default/objects/Tenancy__c/fields/Tenant_Account__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Account linked to the tenant Contact. Mirrors Tenant__r.AccountId. Auto-populated by Flow on record creation. Supports both Business Accounts and Person Accounts.</description>
    <label>Tenant Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Tenancies</relationshipLabel>
    <relationshipName>Tenancies</relationshipName>
    <type>Lookup</type>
</CustomField>