force-app/main/default/objects/Tenancy__c/fields/Total_Arrears__c.field-meta.xml
<CustomField>
    <fullName>Total_Arrears__c</fullName>
    <description>Sum of all Overdue invoice amounts on this tenancy. A non-zero value triggers automated arrears notices to the tenant.</description>
    <label>Total Arrears</label>
    <summarizedField>Invoice__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Invoice__c.Status__c</field>
        <operation>equals</operation>
        <value>Overdue</value>
    </summaryFilterItems>
    <summaryForeignKey>Invoice__c.Tenancy__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>