force-app/main/default/objects/Tenancy__c/fields/Total_Credits_Applied__c.field-meta.xml
<CustomField>
    <fullName>Total_Credits_Applied__c</fullName>
    <description>Total credits automatically applied to invoices by the invoice generation batch.</description>
    <label>Total Credits Applied</label>
    <summarizedField>Payment__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Payment__c.Payment_Type__c</field>
        <operation>equals</operation>
        <value>Credit Applied</value>
    </summaryFilterItems>
    <summaryForeignKey>Payment__c.Tenancy__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>