force-app/main/default/objects/Tenancy__c/fields/Total_Received__c.field-meta.xml
<CustomField>
    <fullName>Total_Received__c</fullName>
    <description>Sum of all Paid invoice amounts on this tenancy. Updated automatically when an Invoice is marked Paid (via approved Payment).</description>
    <label>Total Received</label>
    <summarizedField>Invoice__c.Amount__c</summarizedField>
    <summaryForeignKey>Invoice__c.Tenancy__c</summaryForeignKey>
    <summaryFilterItems>
        <field>Invoice__c.Status__c</field>
        <operation>equals</operation>
        <value>Paid</value>
    </summaryFilterItems>
    <summaryOperation>SUM</summaryOperation>
    <type>Summary</type>
</CustomField>