force-app/main/default/objects/Tenancy__c/fields/Total_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Total_Scheduled__c</fullName>
    <description>Sum of upcoming invoice amounts in Scheduled status. Represents future rent obligations created by the batch job but not yet due.</description>
    <label>Total Scheduled (Upcoming)</label>
    <summarizedField>Invoice__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Invoice__c.Status__c</field>
        <operation>equals</operation>
        <value>Scheduled</value>
    </summaryFilterItems>
    <summaryForeignKey>Invoice__c.Tenancy__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>