force-app/main/default/objects/Tenancy__c/fields/Total_Unpaid__c.field-meta.xml
<CustomField>
    <fullName>Total_Unpaid__c</fullName>
    <description>Sum of all Unpaid invoice amounts on this tenancy (due but not yet paid, not yet overdue).</description>
    <label>Total Unpaid</label>
    <summarizedField>Invoice__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Invoice__c.Status__c</field>
        <operation>equals</operation>
        <value>Unpaid</value>
    </summaryFilterItems>
    <summaryForeignKey>Invoice__c.Tenancy__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>