force-app/main/default/objects/Tenancy__c/validationRules/Cannot_Reactivate_After_Termination.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Reactivate_After_Termination</fullName>
    <active>true</active>
    <description>Prevents a Terminated or Expired tenancy from being moved back to Active or Pending.</description>
    <errorConditionFormula>AND(
    NOT(ISNEW()),
    OR(
        ISPICKVAL(PRIORVALUE(Status__c), "Terminated"),
        ISPICKVAL(PRIORVALUE(Status__c), "Expired")
    ),
    OR(
        ISPICKVAL(Status__c, "Active"),
        ISPICKVAL(Status__c, "Pending")
    )
)</errorConditionFormula>
    <errorMessage>A Terminated or Expired tenancy cannot be reactivated.</errorMessage>
</ValidationRule>