force-app/main/default/objects/Tenancy__c/validationRules/Room_Required_When_Rent_a_Room.validationRule-meta.xml
<ValidationRule>
    <fullName>Room_Required_When_Rent_a_Room</fullName>
    <active>true</active>
    <description>Room must be populated when the tenancy is for a room rental.</description>
    <errorConditionFormula>AND(Rent_a_room__c = true, ISBLANK(Room__c))</errorConditionFormula>
    <errorMessage>Room is required when &quot;Rent a Room&quot; is enabled.</errorMessage>
</ValidationRule>