force-app/main/default/objects/Tenancy__c/listViews/My_Tenancy.listView-meta.xml
<ListView>
    <fullName>My_Tenancy</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Available_Credits__c</columns>
    <columns>Total_Arrears__c</columns>
    <columns>Room__c</columns>
    <columns>Tenant__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Tenancy</label>
</ListView>